--- a/src/locale/messages.de.xlf
+++ b/src/locale/messages.de.xlf
@@ -1,62 +1,49 @@
-<?xml version="1.0" encoding="UTF-8" ?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-  <file source-language="en-US" datatype="plaintext" original="ng2.template">
+  <file source-language="en-US" target-language="de" datatype="plaintext" original="ng2.template">
     <body>
+      <trans-unit id="1834844445344817694" datatype="html">
+        <source>Unauthorized</source>
+        <target state="new">Unbefugt</target>
+      </trans-unit>
+      <trans-unit id="9050981677989412526" datatype="html">
+        <source>You need to log in to access the resource.</source>
+        <target state="new">Sie müssen sich anmelden, um auf die Ressource zuzugreifen.</target>
+      </trans-unit>
+      <trans-unit id="143318366100741906" datatype="html">
+        <source>Access Denied</source>
+        <target state="new">Zugriff Verweigert</target>
+      </trans-unit>
+      <trans-unit id="4530382279851900680" datatype="html">
+        <source>You do not have the permission to access this resource.</source>
+        <target state="new">Sie haben keine Berechtigung, auf diese Ressource zuzugreifen.</target>
+      </trans-unit>
       <trans-unit id="2796760620406713589" datatype="html">
         <source> Email is required. </source>
-        <target> Email is erforderlich. </target>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/features/auth/login/login.component.html</context>
-          <context context-type="linenumber">9</context>
-        </context-group>
+        <target state="new"> Email ist erforderlich. </target>
       </trans-unit>
       <trans-unit id="248663756472436313" datatype="html">
         <source> Email is invalid. </source>
-        <target> Email is ungültig. </target>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/features/auth/login/login.component.html</context>
-          <context context-type="linenumber">12</context>
-        </context-group>
+        <target state="new"> Email ist ungültig. </target>
       </trans-unit>
       <trans-unit id="1431416938026210429" datatype="html">
         <source>Password</source>
-        <target>Passwort</target>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/features/auth/login/login.component.html</context>
-          <context context-type="linenumber">17</context>
-        </context-group>
+        <target state="new">Passwort</target>
       </trans-unit>
       <trans-unit id="2161528641772974097" datatype="html">
         <source> Password is required. </source>
-        <target> Passwort is erforderlich. </target>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/features/auth/login/login.component.html</context>
-          <context context-type="linenumber">20</context>
-        </context-group>
+        <target state="new"> Passwort ist erforderlich. </target>
       </trans-unit>
       <trans-unit id="7551730457094500434" datatype="html">
         <source> Password must be at least 10 characters. </source>
-        <target> Passwort muss mindestens 10 Zeichen lang sein. </target>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/features/auth/login/login.component.html</context>
-          <context context-type="linenumber">23</context>
-        </context-group>
+        <target state="new"> Passwort muss mindestens 10 Zeichen lang sein. </target>
       </trans-unit>
       <trans-unit id="2542719271567659201" datatype="html">
         <source> Password must contain at least one letter and one number. </source>
-        <target> Password muss mindestens einen Buchstaben und eine Zahle enthalten. </target>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/features/auth/login/login.component.html</context>
-          <context context-type="linenumber">26</context>
-        </context-group>
+        <target state="new"> Passwort muss mindestens einen Buchstaben und eine Zahl enthalten. </target>
       </trans-unit>
       <trans-unit id="4166166242155319722" datatype="html">
         <source> Log In </source>
-        <target> Anmelden </target>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/features/auth/login/login.component.html</context>
-          <context context-type="linenumber">31</context>
-        </context-group>
+        <target state="new"> Anmelden </target>
       </trans-unit>
     </body>
   </file>
