--- a/src/locale/messages.de.xlf
+++ b/src/locale/messages.de.xlf
@@ -45,6 +45,14 @@
         <source> Log In </source>
         <target state="new"> Anmelden </target>
       </trans-unit>
+      <trans-unit id="2821179408673282599" datatype="html">
+        <source>Home</source>
+        <target state="new">Startseite</target>
+      </trans-unit>
+      <trans-unit id="2454050363478003966" datatype="html">
+        <source>Login</source>
+        <target state="new">Anmelden</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
